--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div class="section">
       <h2>🚀 Discord Servers</h2>
       <div class="buttons">
-        <a href="https://discord.gg/your-server-1" target="_blank" class="btn">Join Server 1</a>
-        <a href="https://discord.gg/your-server-2" target="_blank" class="btn">Join Server 2</a>
+        <a href="https://discord.gg/573" target="_blank" class="btn">Join Server 1</a>
+        <a href="https://discord.gg/mKJMrT3xaz" target="_blank" class="btn">Join Server 2</a>
       </div>
     </div>
 
     <div class="section">
       <h2>🤖 GitHub Bot Repository</h2>
-      <a href="https://github.com/your-username/your-discord-bot" target="_blank" class="btn github">View on GitHub</a>
+      <a href="https://github.com/ReakJustin000/your-discord-bot" target="_blank" class="btn github">View on GitHub</a>
     </div>
   </div>
 </body>
